--- a/_posts/2015-06-16-hello-github.textile
+++ b/_posts/2015-06-16-hello-github.textile
@@ -10,11 +10,10 @@ p(meta). 18 Oct 2008 - Stone
 ### Hello World
 测试
 
-```
-$ cd your_repo_root/repo_name
+<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-```
+</code></pre>
 
 ### 这是题
 测试一下github blog 如果好用　可以长久使用
