--- a/_posts/2015-08-07-scipy_misc_module.textile
+++ b/_posts/2015-08-07-scipy_misc_module.textile
@@ -1,28 +1,12 @@
 ---
 layout: post
 title: Scipy.misc模块图片使用
+categories: Python Scipy
 ---
 
-## 序
-Scipy.misc　模块文档地址　[http://docs.scipy.org/doc/scipy/reference/misc.html#module-scipy.misc]
-
+Scipy.misc　模块文档地址　[http://docs.scipy.org/doc/scipy/reference/misc.html#module-scipy.misc](http://docs.scipy.org/doc/scipy/reference/misc.html#module-scipy.misc) 
 
 ---
-### 示例图片
-
-那个美女模特　
-<pre>
-<code>
->>> import scipy.misc
->>> lena = scipy.misc.lena()
->>> lena.shape
-(512, 512)
->>> lena.max()
-245
->>> lena.dtype
-dtype('int32')
-</code>
-</pre>
 
 那个美女模特　
 <pre>
@@ -51,15 +35,16 @@ dtype('int32')
 >>> scipy.misc.imshow(ascent)
 </code>
 </pre>
+---
 
 读取自定义图片
-<pre>
+
 <code>
 >>> import scipy.misc
 >>> lenda = cipy.misc.imread('lenda.png')
 >>> scipy.misc.imshow(lenda)
 </code>
-</pre>
+
 
 
 
